--- a/Web/Bookworm.Web/Views/Category/All.cshtml
+++ b/Web/Bookworm.Web/Views/Category/All.cshtml
@@ -18,7 +18,7 @@
                 <a class="category-link"
                    asp-controller="Book"
                    asp-action="All"
-                   asp-route-categoryName="@Model[i].Name">
+                   asp-route-category="@Model[i].Name">
                     <div class="card bg-dark text-light h-100">
                         <img src="@Model[i].ImageUrl" alt="Book" height="300">
                     </div>
@@ -28,7 +28,7 @@
                 <a class="category-link"
                    asp-controller="Book"
                    asp-action="All"
-                   asp-route-categoryName="@Model[i + 1].Name">
+                   asp-route-category="@Model[i + 1].Name">
                     <div class="card bg-dark text-light h-100">
                         <img src="@Model[i + 1].ImageUrl" alt="Book" height="300">
                     </div>
@@ -38,7 +38,7 @@
                 <a class="category-link"
                    asp-controller="Book"
                    asp-action="All"
-                   asp-route-categoryName="@Model[i + 2].Name">
+                   asp-route-category="@Model[i + 2].Name">
                     <div class="card bg-dark text-light h-100">
                         <img src="@Model[i + 2].ImageUrl" alt="Book" height="300">
                     </div>
