--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -7,22 +7,28 @@
     this.ViewData["PaginationControllerName"] = "Book";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/bookAll.css" asp-append-version="true" />
+}
+
 <partial name="PartialViews/_TitleCardPartial" />
 
-<div>
-    <div class="row">
-        @foreach (var book in Model.Books)
-        {
-            <div class="col-md-3 mt-5 mb-4">
-                <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id">
-                    <div class="card bg-dark text-light h-100">
-                        <img title="@book.Title" src="@book.ImageUrl" alt="@book.Title" height="300">
-                    </div>
-                </a>
-            </div>
-        }
-    </div>
-</div>
+<section class="booksSection">
+    @foreach (var book in Model.Books)
+    {
+        <div>
+        <a asp-controller="Book"
+           asp-action="Details"
+           asp-route-id="@book.Id">
+                <img title="@book.Title"
+                 src="@book.ImageUrl"
+                 alt="@book.Title"
+                 height="300"
+                 class="imageZoom">  
+        </a>
+        </div>
+    }
+</section>
 
 @if (Model.PagesCount > 1)
 {
