--- a/Web/Bookworm.Web/Views/Book/Details.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Details.cshtml
@@ -28,7 +28,7 @@
             Category:
             <a asp-controller="Book"
                asp-action="All"
-               asp-route-categoryName="@Model.CategoryName">
+               asp-route-category="@Model.CategoryName">
                 @Model.CategoryName
             </a>
         </li>
