Implement book search for user's books

--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -12,16 +12,7 @@
 
 <partial name="PartialViews/_TitleCardPartial" />
 
-<div class="input-group mt-4 bookSearchInputGroup">
-    <input type="text"
-           class="form-control bookSearchInput"
-           placeholder="Search by book title, author or publisher..."
-           aria-label="Recipient's username"
-           aria-describedby="button-addon2">
-    <button type="button" id="bookSearchButton">
-        <i class="fa fa-magnifying-glass fa-xl"></i>
-    </button>
-</div>
+<partial name="PartialViews/_BooksSearchInputPartial"/>
 
 <section class="booksSection">
     @foreach (var book in Model.Books)
