--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -5,71 +5,39 @@
     this.ViewData["Count"] = Model.RecordsCount;
 }
 
-<partial name="PartialViews/_TitleCardPartial" />
+@section Styles {
+    <link rel="stylesheet" href="~/css/bookAll.css" asp-append-version="true" />
+}
 
-<div class="row">
-    @foreach (var book in Model.Books)
-    {
-        <div class="col-md-3 mt-5 mb-4">
-            <a asp-controller="Book" asp-action="Details" asp-route-id="@book.Id">
-                <div class="card bg-dark text-light h-100">
-                    <img title="@book.Title" class="zoom" src="@book.ImageUrl" alt=@book.Title height="300">
-                </div>
-            </a>
-        </div>
-    }
-</div>
+<partial name="PartialViews/_TitleCardPartial" />
 
 @if (Model.RecordsCount > 0)
 {
-    <nav>
-        <ul class="pagination justify-content-center">
-            @if (Model.HasPreviousPage == false)
-            {
-                <li class="page-item disabled">
-                    <a id="previous" class="page-link" asp-controller="Book" asp-action="UserBooks" asp-route-page="@Model.PreviousPageNumber">Previous</a>
-                </li>
-            }
-            else
-            {
-                <li class="page-item">
-                    <a id="previous" class="page-link" asp-controller="Book" asp-action="UserBooks" asp-route-page="@Model.PreviousPageNumber">Previous</a>
-                </li>
-            }
-            @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
-            {
-                if (i > 0)
-                {
-                    <li class="page-item"><a class="page-link" asp-controller="Book" asp-action="UserBooks" asp-route-page="@i">@i</a></li>
-                }
-            }
-            <li class="page-item active">
-                <span class="page-link">
-                    @Model.PageNumber
-                    <span class="sr-only">(current)</span>
-                </span>
-            </li>
-            @for (int i = Model.PageNumber + 1; i <= Model.PageNumber + 3; i++)
-            {
-                if (i <= Model.PagesCount)
-                {
-                    <li class="page-item"><a class="page-link" asp-controller="Book" asp-action="UserBooks" asp-route-page="@i">@i</a></li>
-                }
-            }
-            @if (Model.HasNextPage == false)
-            {
-                <li class="page-item disabled">
-                    <a class="page-link" asp-controller="Book" asp-action="UserBooks" asp-route-page="@Model.NextPageNumber">Next</a>
-                </li>
-            }
-            else
-            {
-                <li class="page-item">
-                    <a class="page-link" asp-controller="Book" asp-action="UserBooks" asp-route-page="@Model.NextPageNumber">Next</a>
-                </li>
-            }
-        </ul>
-    </nav>
+    <input type="hidden" id="isForUserBooks" value="true" />
+
+    <partial name="PartialViews/_BooksSearchInputPartial" />
+
+    <section class="booksSection">
+        @foreach (var book in Model.Books)
+        {
+            <div>
+                <a asp-controller="Book"
+                   asp-action="Details"
+                   asp-route-id="@book.Id">
+                    <img title="@book.Title"
+                         src="@book.ImageUrl"
+                         alt="@book.Title"
+                         height="300"
+                         class="imageZoom">
+                </a>
+            </div>
+        }
+    </section>
+
+    @if (Model.PagesCount > 1)
+    {
+        <partial name="PartialViews/_PaginationPartial" model="@Model" />
+    }
 }
 else
 {
@@ -80,4 +48,8 @@ else
             Click here!
         </a>
     </h5>
+}
+
+@section Scripts {
+    <script type="module" src="~/js/books.js"></script>
 }
