--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -3,6 +3,8 @@
 @{
     this.ViewData["Title"] = "My Books";
     this.ViewData["Count"] = Model.RecordsCount;
+    this.ViewData["PaginationActionName"] = "UserBooks";
+    this.ViewData["PaginationControllerName"] = "Book";
 }
 
 @section Styles {
@@ -17,22 +19,7 @@
 
     <partial name="PartialViews/_BooksSearchInputPartial" />
 
-    <section class="booksSection">
-        @foreach (var book in Model.Books)
-        {
-            <div>
-                <a asp-controller="Book"
-                   asp-action="Details"
-                   asp-route-id="@book.Id">
-                    <img title="@book.Title"
-                         src="@book.ImageUrl"
-                         alt="@book.Title"
-                         height="300"
-                         class="imageZoom">
-                </a>
-            </div>
-        }
-    </section>
+    <partial name="PartialViews/_BookListingPartial" model="@Model.Books" />
 
     @if (Model.PagesCount > 1)
     {
