--- a/Web/Bookworm.Web/Views/Book/GeneratedBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/GeneratedBooks.cshtml
@@ -1,22 +1,13 @@
-﻿@model IEnumerable<BookDetailsViewModel>
+﻿@model IEnumerable<BookViewModel>
 
 @{
     ViewData["Title"] = "Generated Books";
 }
 
-<h2 class="text-center">@ViewData["Title"]</h2>
+@section Styles {
+    <link rel="stylesheet" href="~/css/bookListing.css" asp-append-version="true" />
+}
 
-<div>
-    <div class="row">
-        @foreach (var book in Model)
-        {
-            <div class="col-md-3 mt-5 mb-4">
-                <a asp-controller="Book" asp-action="CurrentBook" asp-route-id="@book.Id" target="_blank">
-                    <div class="card bg-dark text-light h-100">
-                        <img title="@book.Title" class="zoom" src="@book.ImageUrl" alt="Book" height="300">
-                    </div>
-                </a>
-            </div>
-        }
-    </div>
-</div>
+<h2 class="text-center mt-5">@ViewData["Title"]</h2>
+
+<partial name="PartialViews/_BookListingPartial" model="@Model" />
