--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -2,16 +2,14 @@
 
 @{
     this.ViewData["Title"] = "My Books";
-    this.ViewData["Count"] = Model.RecordsCount;
-    this.ViewData["PaginationActionName"] = "UserBooks";
-    this.ViewData["PaginationControllerName"] = "Book";
+    var titleCardModel = new TitleCardPartialViewModel { Title = "My Books", Count = Model.RecordsCount };
 }
 
 @section Styles {
     <link rel="stylesheet" href="~/css/bookAll.css" asp-append-version="true" />
 }
 
-<partial name="PartialViews/_TitleCardPartial" />
+<partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
 @if (Model.RecordsCount > 0)
 {
@@ -23,7 +21,7 @@
 
     @if (Model.PagesCount > 1)
     {
-        <partial name="PartialViews/_PaginationPartial" model="@Model" />
+        <partial name="PartialViews/Pagination/_BooksPaginationPartial" model="@Model" />
     }
 }
 else
