--- a/Web/Bookworm.Web/Views/User/Statistics.cshtml
+++ b/Web/Bookworm.Web/Views/User/Statistics.cshtml
@@ -2,10 +2,11 @@
 
 @{
     ViewData["Title"] = "Users Statistics";
+    var titleCardModel = new TitleCardPartialViewModel { Title = "Users Statistics" };
     int index = 1;
 }
 
-<partial name="PartialViews/_TitleCardPartial" />
+<partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
 <table class="table table-bordered mt-5">
     <thead>
