--- a/Web/Bookworm.Web/Views/Book/Random.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Random.cshtml
@@ -2,14 +2,14 @@
 
 @{
     this.ViewData["Title"] = "Random Book Generator";
-    this.ViewData["Icon-Class"] = "fa-cog";
+    var titleCardModel = new TitleCardPartialViewModel { Title = "Random Book Generator", IconClass = "fa-cog" };
 }
 
 @section Styles {
     <link rel="stylesheet" href="~/css/randomBooks.css" asp-append-version="true" />
 }
 
-<partial name="PartialViews/_TitleCardPartial" />
+<partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
 <section class="randomBooksSection">
     <form method="post" asp-controller="Book" asp-action="Random" class="randomBooksForm">
