--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -1,16 +1,17 @@
 ﻿@model UploadBookViewModel
 
 @{
-    this.ViewData["Icon-Class"] = "fa-book";
     var title = this.ViewData["Title"] as string;
     var action = this.ViewData["Action"] as string;
+    var titleCardModel = new TitleCardPartialViewModel { Title = title, IconClass = "fa-book" };
+
 }
 
 @section Styles {
     <link rel="stylesheet" href="~/css/bookUpload.css" asp-append-version="true" />
 }
 
-<partial name="PartialViews/_TitleCardPartial" />
+<partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
 <section class="uploadBookSection">
     <form asp-controller="Book"
