--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -2,19 +2,17 @@
 
 @{
     this.ViewData["Title"] = "My Quotes";
-    this.ViewData["Count"] = @Model.RecordsCount;
     this.ViewData["IsUserQuotes"] = true;
-    this.ViewData["PaginationControllerName"] = "Quote";
-    this.ViewData["PaginationActionName"] = "UserQuotes";
+    var titleCardModel = new TitleCardPartialViewModel { Title = "My Quotes", Count = Model.RecordsCount };
 }
 
-<partial name="PartialViews/_TitleCardPartial" />
+<partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
 <partial name="PartialViews/Quotes/_QuotesTablePartial" />
 
 @if (Model.PagesCount > 1)
 {
-    <partial name="PartialViews/_PaginationPartial" />
+    <partial name="PartialViews/Pagination/_QuotesPaginationPartial" />
 }
 
 <div class="modal fade"
